--- a/calci.css
+++ b/calci.css
@@ -125,20 +125,22 @@ body
     .display #screen 
     {
         width: 91%;
+        font-size: 30px;    
+        height: 50px;
     }
     .container
     {
         margin-left: 0px;
-        width: 210px;
+        width: 300px;
         box-shadow: 10px 10px 20px #000000,
                     -8px -8px 15px #3d3d3d;
     }
     .row button 
     {
-        margin: 2px;
-        width: 13.1%;
+        margin: 3px;
+        width: 13.3%;
         border-radius: 10px;
-        font-size: 9px;
+        font-size: 12px;
         box-shadow: 5px 5px 8px #000000,
                     -2px -2px 5px #3d3d3d;
     }
